# GameEngine-name-subject-to-change

./: .gitignore  .gitmodules  Application.cpp  Application.h  CMakeCache.txt  CMakeLists.txt  FrameManager.cpp  FrameManager.h  GameLayer.cpp  GameLayer.h  GameState.cpp  GameState.h  GameStateMachine.cpp  GameStateMachine.h  LICENSE  Layer.h  OSApi.cpp  OSApi.h  README.md  TestLayer.h  Window.cpp  Window.h  build.bat  build.sh  config.json  main.cpp
Audio/: AudioObject.cpp  AudioObject.h  AudioSource.cpp  AudioSource.h  AudioSystem.cpp  AudioSystem.h
Core/: BoundingVolumes.cpp  BoundingVolumes.h  Debug.h  Defines.h  ExecutableCommand.h  FrameMultiBufferResource.h  Geometry.h  Hash.h  ModuleInterface.h  ModuleManager.cpp  ModuleManager.h  RuntimeTag.h  TypeList.h  UnitConverter.cpp  UnitConverter.h
Core/Extensions/: EntitySerializationECSAdapter.h
Editor/: Editor.cpp  Editor.h  FileExplorer.cpp  FileExplorer.h  MaterialEditor.cpp  MaterialEditor.h  PrefabEditor.cpp  PrefabEditor.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneGraphViewer.cpp  SceneGraphViewer.h  Viewport.cpp  Viewport.h
Editor/PropertiesPanelEntries/: AudioPropertiesPanelEntry.cpp  AudioPropertiesPanelEntry.h  DynamicPropertiesPanelEntry.cpp  DynamicPropertiesPanelEntry.h  MeshPropertiesPanelEntry.cpp  MeshPropertiesPanelEntry.h  SkeletalMeshPropertiesPanelEntry.cpp  SkeletalMeshPropertiesPanelEntry.h  SkyLightPropertiesPanelEntry.cpp  SkyLightPropertiesPanelEntry.h  UITextPropertiesPanelEntry.cpp  UITextPropertiesPanelEntry.h
Entry/: main.cpp
Events/: CollisionEvent.h  Event.h  KeyCodes.h  KeyPressEvent.h  MeshChangedEvent.h  MouseButtonPressEvent.h  MouseMoveEvent.h  SubjectObserver.h
Input/: Input.cpp  Input.h
R_API/OpenGL/: OpenGLDrawCommand.cpp  OpenGLDrawCommand.h  OpenGLRenderCommand.h  OpenGLRenderContext.cpp  OpenGLRenderQueue.cpp  OpenGLRenderQueue.h
Renderer/: MeshManager.cpp  MeshManager.h  PipelineManager.cpp  PipelineManager.h  PipelinePresets.h  ReflectionMap.h  RenderCommandAllocator.cpp  RenderCommandAllocator.h  RenderCommandList.cpp  RenderCommandList.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderContext.cpp  RenderContext.h  RenderDescriptorHeap.cpp  RenderDescriptorHeap.h  RenderDescriptorHeapBlock.cpp  RenderDescriptorHeapBlock.h  RenderFence.cpp  RenderFence.h  RenderQueue.cpp  RenderQueue.h  RenderResource.cpp  RenderResource.h  RenderResourceManager.cpp  RenderResourceManager.h  Renderer.cpp  Renderer.h  RendererDefines.h  RootSignature.cpp  RootSignature.h  ShaderManager.cpp  ShaderManager.h  TextRenderer.cpp  TextRenderer.h  TextureManager.cpp  TextureManager.h
Renderer/Renderer3D/: DefferedRenderingPipeline.cpp  DefferedRenderingPipeline.h  MaterialManager.cpp  MaterialManager.h  RenderPass.h  RenderPassBuilder.cpp  RenderPassBuilder.h  RenderPipeline.cpp  RenderPipeline.h  RenderResourceCollection.h  Renderer3D.cpp  Renderer3D.h
States/: SandboxState.cpp  SandboxState.h
TestModule/: TestFunc.cpp  TestFunc.h
Utility/: Profiler.h
World/: ComponentTypes.h  Entity.h  EntityManager.cpp  EntityManager.h  EntityParser.cpp  EntityParser.h  EntityTypes.cpp  EntityTypes.h  PhysicsEngine.cpp  PhysicsEngine.h  SceneGraph.cpp  SceneGraph.h  SceneProxy.cpp  SceneProxy.h  SpatialIndex.cpp  SpatialIndex.h  System.h  World.cpp  World.h
World/Components/: AudioComponent.h  BoundingVolumeComponent.cpp  BoundingVolumeComponent.h  CameraComponent.h  ConstructionComponent.h  DefferedUpdateComponent.h  DynamicPropertiesComponent.cpp  DynamicPropertiesComponent.h  InitializationComponent.h  KeyPressedScriptComponent.h  LabelComponent.h  LightComponent.cpp  LightComponent.h  LoadedComponent.h  MeshComponent.h  MousePressedScriptComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  PrefabComponent.cpp  PrefabComponent.h  ScriptComponent.h  SerializableComponent.h  ShadowCasterComponent.cpp  ShadowCasterComponent.h  SkeletalMeshComponent.h  SkylightComponent.h  SquareComponent.h  TransformComponent.h  UITextComponent.cpp  UITextComponent.h
World/ScriptModules/: ApplicationDataModule.cpp  ApplicationDataModule.h  CollisionModule.cpp  CollisionModule.h  DefferedPropertySetModule.cpp  DefferedPropertySetModule.h  EventModule.cpp  EventModule.h  GlobalEntityModule.cpp  GlobalEntityModule.h  IOModule.cpp  IOModule.h  LocalEntityModule.cpp  LocalEntityModule.h  LocalPropertySetModule.cpp  LocalPropertySetModule.h  MathModule.cpp  MathModule.h  PrefabManipulationModule.cpp  PrefabManipulationModule.h  RayCastingModule.cpp  RayCastingModule.h  ScriptModule.h  StateModule.cpp  StateModule.h  TimeModule.cpp  TimeModule.h
World/Systems/: AudioUpdateSystem.cpp  AudioUpdateSystem.h  BoxRenderer.h  EntityConstructionSystem.cpp  EntityConstructionSystem.h  InitializationSystem.cpp  InitializationSystem.h  KeyPressedScriptSystem.cpp  KeyPressedScriptSystem.h  LoadingMeshSystem.cpp  LoadingMeshSystem.h  MeshRenderSystem.cpp  MeshRenderSystem.h  MousePressedScriptSystem.cpp  MousePressedScriptSystem.h  ScriptSystem.cpp  ScriptSystem.h  ScriptSystemManagement.cpp  (+3 more)
assets/: AnimationBlendPrefab.pre  AnimationBlendingTest.scene  Box.mesh  CameraEntity.lua  CameraEntity2.lua  Cascaded_Test.scene  ComplexEntity.lua  ComplexEntityChild.lua  Demo.scene  DemoPrefab.pre  Demo_backup.scene  EmptyScene.json  Entity_snapshot.json  GME_Test_Scene.scene  GroundMat.mat  GroundMaterial.mat  Imported_mesh.mesh  MainPrefab.pre  MainTestScene.scene  Material1.json  Material1.mat  Movable_Camera.pre  Movable_Camera_backup.pre  PhysicsControllerTest.scene  PhysicsControllerTest_backup.scene  PhysicsTest.scene  PlayerController.pre  PlayerController_backup.pre  PrefabSaveFile.scene  PrefabSpatialTest.pre  PrefabTest.pre  Scene  ScriptPrefab.pre  ScriptTestScene.scene  SecondScript.lua  ShadowPrefab.pre  SpatialSceneTest.scene  Sphere.mesh  StateScript.lua  TestCreate.scene  (+22 more)
dependencies/: CMakeLists.txt
dependencies/Additional/: CMakeLists.txt  impl_custom_imgui_backend.cpp  impl_custom_imgui_backend.h  impl_custom_imgui_platform.cpp  impl_custom_imgui_platform.h
dependencies/glew/: glew.pc
(+117 files in other folders)
